configure rspec and cucumber tests [#80064688]

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   <<: *default
   database: meetingsurvey_development
 
-test:
+test: &test
   <<: *default
   database: meetingsurvey_test
 
@@ -16,3 +16,6 @@ production:
   <<: *default
   database: meetingsurvey_production
   password: <%= ENV['MEETINGSURVEY_DATABASE_PASSWORD'] %>
+
+cucumber:
+  <<: *test
